src/test/data/c/fail/init_type.c
struct S {
  int x;
} s;

int
f(void) {
  int acc = s;
  return acc;
}
