src/test/data/c/fail/init_type.c.err
data/c/fail/init_type.c:7:13-14: error: assignment from incompatible types: 'struct S' to 'int'
 7 |   int acc = s;
   |             ^
